--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SumbanginAja</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_profile">Profile</string>
 </resources>
