feature (home) : implement food feature at home design (home) : implement shimmering loading and home layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="label_looking_for">Mau cari apa ?</string>
     <string name="label_food_around_you">Makanan di sekitarmu</string>
     <string name="label_show_all">Lihat selengkapnya</string>
+    <string name="label_food_type">Food</string>
+    <string name="label_non_food_type">Non-Food</string>
 </resources>
