--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="label_phone">No Telepon</string>
     <string name="hint_phone">No telepon</string>
     <string name="hint_address">Alamat</string>
+    <string name="title_account">Akun</string>
 </resources>
