feature (home) : connecting home with food API, and get user current location feature (detail food) : implement detail food design (home) : implement shimmering loading and home layout design (detail food) : implement design detail food with map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
     <string name="label_location">Lokasi</string>
     <string name="label_open_map">Buka Peta</string>
+    <string name="label_call_food_ranger">Hubungi Food Ranger</string>
 
 </resources>
