--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="label_call_food_ranger">Hubungi Food Ranger</string>
     <string name="label_give_food">Serahkan Makanan</string>
     <string name="label_scan_barcode_below">Scan Barcode Dibawah Ini</string>
+    <string name="message_password_must_8_character">Password minimal harus 8 karakter</string>
 
 </resources>
