--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,8 @@
     <string name="label_scan_barcode_below">Scan Barcode Dibawah Ini</string>
     <string name="message_password_must_8_character">Password minimal harus 8 karakter</string>
     <string name="title_my_food_list">Daftar Makanan Saya</string>
+    <string name="message_phone_must_not_empty">No telepon tidak boleh kosong</string>
+    <string name="message_phone_number_not_valid">No telepon tidak valid</string>
+    <string name="error_login_failed">Username/Password anda salah</string>
 
 </resources>
