Feature Map - Adding map feature, intent to google map using latitude longitude

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="label_thank_you_food_ranger">Terimakasih telah berkontribusi menjadi Food Ranger, dan telah menyelamatkan bumi dari sampah makanan</string>
     <string name="action_back_to_home">Kembali ke Beranda</string>
     <string name="action_close">Tutup</string>
+    <string name="action_take_me_there">Arahkan Saya</string>
 
 </resources>
